// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TimelineChart should have collapse functionality 1`] = `
<div>
  <div
    class="timeline timeline--collapsed"
  >
    <h2
      class="timeline__title"
    >
      Star Wars timeline
    </h2>
    <p>
      <strong>
        "Star Wars timeline"
      </strong>
       is a chart that visually represents the chronological order of Star Wars movies and series.
    </p>
    <p>
      The first column is movie/series name, the next columns are years in timeline at which this movie/series took place.
    </p>
    <h3>
      What do BBY and ABY mean?
    </h3>
    <p>
      In Star Wars galactic history the central event is considered as 
      <strong>
        Battle of Yavin
      </strong>
       (Episode IV).
    </p>
    <p>
      So BBY and ABY are "
      <strong>
        B
      </strong>
      efore 
      <strong>
        B
      </strong>
      attle of 
      <strong>
        Y
      </strong>
      avin" and "
      <strong>
        A
      </strong>
      fter 
      <strong>
        B
      </strong>
      attle of 
      <strong>
        Y
      </strong>
      avin" respectively. Or simply: before or after Eposide IV.
    </p>
    <div
      class="timeline__chart-scroll"
    >
      <table
        class="timeline__chart timeline__chart--header"
      >
        <thead>
          <tr
            class="timeline__chart-row"
          >
            <th
              class="timeline__chart-col timeline__chart-col--header timeline__chart-col--first-cell"
            >
              <span>
                #
              </span>
              <div
                class="timeline__collapse"
              />
            </th>
            <th
              class="timeline__chart-col timeline__chart-col--header"
            >
              10 BBY
            </th>
            <th
              class="timeline__chart-col timeline__chart-col--header"
            >
              9 BBY
            </th>
            <th
              class="timeline__chart-col timeline__chart-col--header"
            >
              8 BBY
            </th>
            <th
              class="timeline__chart-col timeline__chart-col--header"
            >
              7 BBY
            </th>
            <th
              class="timeline__chart-col timeline__chart-col--header"
            >
              6 BBY
            </th>
            <th
              class="timeline__chart-col timeline__chart-col--header"
            >
              5 BBY
            </th>
            <th
              class="timeline__chart-col timeline__chart-col--header"
            >
              4 BBY
            </th>
            <th
              class="timeline__chart-col timeline__chart-col--header"
            >
              3 BBY
            </th>
            <th
              class="timeline__chart-col timeline__chart-col--header"
            >
              2 BBY
            </th>
            <th
              class="timeline__chart-col timeline__chart-col--header"
            >
              1 BBY
            </th>
            <th
              class="timeline__chart-col timeline__chart-col--header"
            >
              0 BBY
            </th>
            <th
              class="timeline__chart-col timeline__chart-col--header"
            >
              1 ABY
            </th>
            <th
              class="timeline__chart-col timeline__chart-col--header"
            >
              2 ABY
            </th>
            <th
              class="timeline__chart-col timeline__chart-col--header"
            >
              3 ABY
            </th>
            <th
              class="timeline__chart-col timeline__chart-col--header"
            >
              4 ABY
            </th>
            <th
              class="timeline__chart-col timeline__chart-col--header"
            >
              5 ABY
            </th>
            <th
              class="timeline__chart-col timeline__chart-col--header"
            >
              6 ABY
            </th>
            <th
              class="timeline__chart-col timeline__chart-col--header"
            >
              7 ABY
            </th>
            <th
              class="timeline__chart-col timeline__chart-col--header"
            >
              8 ABY
            </th>
            <th
              class="timeline__chart-col timeline__chart-col--header"
            >
              9 ABY
            </th>
            <th
              class="timeline__chart-col timeline__chart-col--header"
            >
              10 ABY
            </th>
          </tr>
        </thead>
      </table>
      <table
        class="timeline__chart timeline__chart--body"
      >
        <tbody>
          <tr
            class="timeline__chart-row"
          >
            <td
              class="timeline__chart-col"
            >
              The Phantom Menace
            </td>
            <td
              class="timeline__chart-col"
            />
            <td
              class="timeline__chart-col"
              colspan="1"
            >
              <div
                class="timeline__chart-line"
              />
            </td>
            <td
              class="timeline__chart-col"
            />
            <td
              class="timeline__chart-col"
            />
            <td
              class="timeline__chart-col"
            />
            <td
              class="timeline__chart-col"
            />
            <td
              class="timeline__chart-col"
            />
            <td
              class="timeline__chart-col"
            />
            <td
              class="timeline__chart-col"
            />
            <td
              class="timeline__chart-col"
            />
            <td
              class="timeline__chart-col"
            />
            <td
              class="timeline__chart-col"
            />
            <td
              class="timeline__chart-col"
            />
            <td
              class="timeline__chart-col"
            />
            <td
              class="timeline__chart-col"
            />
            <td
              class="timeline__chart-col"
            />
            <td
              class="timeline__chart-col"
            />
            <td
              class="timeline__chart-col"
            />
            <td
              class="timeline__chart-col"
            />
            <td
              class="timeline__chart-col"
            />
            <td
              class="timeline__chart-col"
            />
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`TimelineChart should render correctly 1`] = `
<div>
  <div
    class="timeline "
  >
    <h2
      class="timeline__title"
    >
      Star Wars timeline
    </h2>
    <p>
      <strong>
        "Star Wars timeline"
      </strong>
       is a chart that visually represents the chronological order of Star Wars movies and series.
    </p>
    <p>
      The first column is movie/series name, the next columns are years in timeline at which this movie/series took place.
    </p>
    <h3>
      What do BBY and ABY mean?
    </h3>
    <p>
      In Star Wars galactic history the central event is considered as 
      <strong>
        Battle of Yavin
      </strong>
       (Episode IV).
    </p>
    <p>
      So BBY and ABY are "
      <strong>
        B
      </strong>
      efore 
      <strong>
        B
      </strong>
      attle of 
      <strong>
        Y
      </strong>
      avin" and "
      <strong>
        A
      </strong>
      fter 
      <strong>
        B
      </strong>
      attle of 
      <strong>
        Y
      </strong>
      avin" respectively. Or simply: before or after Eposide IV.
    </p>
    <div
      class="timeline__chart-scroll"
    >
      <table
        class="timeline__chart timeline__chart--header"
      >
        <thead>
          <tr
            class="timeline__chart-row"
          >
            <th
              class="timeline__chart-col timeline__chart-col--header timeline__chart-col--first-cell"
            >
              <span>
                #
              </span>
              <div
                class="timeline__collapse"
              />
            </th>
            <th
              class="timeline__chart-col timeline__chart-col--header"
            >
              10 BBY
            </th>
            <th
              class="timeline__chart-col timeline__chart-col--header"
            >
              9 BBY
            </th>
            <th
              class="timeline__chart-col timeline__chart-col--header"
            >
              8 BBY
            </th>
            <th
              class="timeline__chart-col timeline__chart-col--header"
            >
              7 BBY
            </th>
            <th
              class="timeline__chart-col timeline__chart-col--header"
            >
              6 BBY
            </th>
            <th
              class="timeline__chart-col timeline__chart-col--header"
            >
              5 BBY
            </th>
            <th
              class="timeline__chart-col timeline__chart-col--header"
            >
              4 BBY
            </th>
            <th
              class="timeline__chart-col timeline__chart-col--header"
            >
              3 BBY
            </th>
            <th
              class="timeline__chart-col timeline__chart-col--header"
            >
              2 BBY
            </th>
            <th
              class="timeline__chart-col timeline__chart-col--header"
            >
              1 BBY
            </th>
            <th
              class="timeline__chart-col timeline__chart-col--header"
            >
              0 BBY
            </th>
            <th
              class="timeline__chart-col timeline__chart-col--header"
            >
              1 ABY
            </th>
            <th
              class="timeline__chart-col timeline__chart-col--header"
            >
              2 ABY
            </th>
            <th
              class="timeline__chart-col timeline__chart-col--header"
            >
              3 ABY
            </th>
            <th
              class="timeline__chart-col timeline__chart-col--header"
            >
              4 ABY
            </th>
            <th
              class="timeline__chart-col timeline__chart-col--header"
            >
              5 ABY
            </th>
            <th
              class="timeline__chart-col timeline__chart-col--header"
            >
              6 ABY
            </th>
            <th
              class="timeline__chart-col timeline__chart-col--header"
            >
              7 ABY
            </th>
            <th
              class="timeline__chart-col timeline__chart-col--header"
            >
              8 ABY
            </th>
            <th
              class="timeline__chart-col timeline__chart-col--header"
            >
              9 ABY
            </th>
            <th
              class="timeline__chart-col timeline__chart-col--header"
            >
              10 ABY
            </th>
          </tr>
        </thead>
      </table>
      <table
        class="timeline__chart timeline__chart--body"
      >
        <tbody>
          <tr
            class="timeline__chart-row"
          >
            <td
              class="timeline__chart-col"
            >
              The Phantom Menace
            </td>
            <td
              class="timeline__chart-col"
            />
            <td
              class="timeline__chart-col"
              colspan="1"
            >
              <div
                class="timeline__chart-line"
              />
            </td>
            <td
              class="timeline__chart-col"
            />
            <td
              class="timeline__chart-col"
            />
            <td
              class="timeline__chart-col"
            />
            <td
              class="timeline__chart-col"
            />
            <td
              class="timeline__chart-col"
            />
            <td
              class="timeline__chart-col"
            />
            <td
              class="timeline__chart-col"
            />
            <td
              class="timeline__chart-col"
            />
            <td
              class="timeline__chart-col"
            />
            <td
              class="timeline__chart-col"
            />
            <td
              class="timeline__chart-col"
            />
            <td
              class="timeline__chart-col"
            />
            <td
              class="timeline__chart-col"
            />
            <td
              class="timeline__chart-col"
            />
            <td
              class="timeline__chart-col"
            />
            <td
              class="timeline__chart-col"
            />
            <td
              class="timeline__chart-col"
            />
            <td
              class="timeline__chart-col"
            />
            <td
              class="timeline__chart-col"
            />
          </tr>
          <tr
            class="timeline__chart-row"
          >
            <td
              class="timeline__chart-col"
            >
              Episode 2
            </td>
            <td
              class="timeline__chart-col"
            />
            <td
              class="timeline__chart-col"
            />
            <td
              class="timeline__chart-col"
            />
            <td
              class="timeline__chart-col"
            />
            <td
              class="timeline__chart-col"
            />
            <td
              class="timeline__chart-col"
            />
            <td
              class="timeline__chart-col"
            />
            <td
              class="timeline__chart-col"
            />
            <td
              class="timeline__chart-col"
            />
            <td
              class="timeline__chart-col"
            />
            <td
              class="timeline__chart-col"
            />
            <td
              class="timeline__chart-col"
              colspan="9"
            >
              <div
                class="timeline__chart-line"
              />
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;
